# laech.github.io

./: .gitignore  blog.code-workspace  bootstrap  build  cabal  cabal.project.freeze  config.toml  deploy
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/builder.hs/: devcontainer.json
builder.hs/: blog.cabal
builder.hs/src/: Main.hs
content/: 2019-07-26-pipeline-from-input-or-pipeline-to-output.md  2019-12-18-dependency-injection-is-parameter-passing.md  2023-01-27-when-black-magic-fails-silently.md  about.md  default.css
content/blog/: 2019-07-17-mutable-constants.md  2019-07-22-the-principle-of-least-astonishment-and-naming.md  2019-07-25-tcp-deadlock.md  2019-07-26-pipeline-from-input-or-pipeline-to-output.md
content/posts/: 2019-07-17-mutable-constants.md  2019-07-22-the-principle-of-least-astonishment-and-naming.md  2019-07-25-tcp-deadlock.md  2019-07-26-pipeline-from-input-or-pipeline-to-output.md  2019-12-18-dependency-injection-is-parameter-passing.md  2023-01-27-when-black-magic-fails-silently.md  2023-09-24-dont-pass-control-flags-downward.md  2023-10-12-my-first-open-source-project.md  2023-10-19-ubuntu-8-04.md
docs/: about.html  default.css  index.html  index.xml
public/: 404.html  about.html  index.html  index.xml  pipeline-from-input-or-pipeline-to-output.html  sitemap.xml  when-black-magic-fails-silently.html
public/about/: index.html
public/css/: default.css
public/dependency-injection-is-parameter-passing/: index.html
public/posts/: 2019-07-17-mutable-constants.html  (+8 more)
src/: Main.hs  default.css
(+53 files in other folders)
