cabal-version: 3.0
name: blog
version: 0.0.0.0
build-type: Simple

executable blog
  ghc-options: -Wall -haddock
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    blaze-html,
    blaze-markup,
    cmark,
    conduit,
    containers,
    directory,
    filepath,
    shakespeare,
    text,
    time,
    xml-conduit,
    xml-hamlet,
    xml-types,
